--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+tarball.tgz
+*csv
 *.pdf
 *.un~
 *.o
@@ -8,3 +10,39 @@
 *.h5
 *.pyc
 *__pycache__*
+plotting/analysis_note_datasets_SR/Fail/MX1600_MY150_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2000_MY250_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2400_MY100_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2400_MY250_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2400_MY350_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2600_MY300_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2800_MY100_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX2800_MY190_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX3000_MY190_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX3000_MY300_CR.csv
+plotting/analysis_note_datasets_SR/Fail/MX3000_MY400_CR.csv
+plotting/analysis_note_datasets_SR/Fail/TTToHadronic_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX1600_MY150_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2000_MY250_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2400_MY100_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2400_MY250_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2400_MY350_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2600_MY300_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2800_MY100_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX2800_MY190_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX3000_MY190_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX3000_MY300_CR.csv
+plotting/analysis_note_datasets_SR/Loose/MX3000_MY400_CR.csv
+plotting/analysis_note_datasets_SR/Loose/TTToHadronic_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX1600_MY150_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2000_MY250_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2400_MY100_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2400_MY250_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2400_MY350_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2600_MY300_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2800_MY100_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX2800_MY190_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX3000_MY190_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX3000_MY300_CR.csv
+plotting/analysis_note_datasets_SR/Pass/MX3000_MY400_CR.csv
+plotting/analysis_note_datasets_SR/Pass/TTToHadronic_CR.csv
